fix(ci): build binaries on independent OSes

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,10 +15,10 @@ on:
 jobs:
   build:
     name: build and upload JLink runtime images
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
